idk just little updt

--- a/src/pages/posts/2023-01.md
+++ b/src/pages/posts/2023-01.md
@@ -21,10 +21,6 @@ And we decided to celebrate the newyear on Tagaytay.
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">at the time we arrive. and the the temperature is so cold, Good View of Volcano!</figcaption>
 </figure>
 
-<figure class="w-lg">
-  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-3.jpg" alt="image description">
-  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">yep it's me idk why......</figcaption>
-</figure>
 
 <figure class="w-lg">
   <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-4.jpg" alt="image description">
@@ -58,6 +54,112 @@ And we decided to celebrate the newyear on Tagaytay.
 </figure>
 
 <figure class="w-lg">
-  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-10.jpg" alt="image description">
+  <img class="max-w-auto h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-10.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">after that we didn't just go home we also hop on zipline! but i didn't take pics, so yeah thanks for the time.. cool isn't?</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-11.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">me and my cousin listening to music ^^, road to home!</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 9 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-01/jan-12.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">just me and my friend, mango graham shake!</figcaption>
+</figure>
+
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 16 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-13.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">1st day of 2nd sem, Shooo!</figcaption>
+</figure>
+
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-14.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">just random pic</figcaption>
+</figure>
+
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-15.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">my classmates ask me if i can go with them at kai mall, random pic, i have facemask on this pic btw</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 20 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-16.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">inside of classroom pic</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-17.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">again!</figcaption>
+</figure>
+
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 21 --</h1> 
+<br>
+<br>
+</figure>
+
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-18.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">cr inside of kaimall</figcaption>
+</figure>
+
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 23 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-19.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i just finish the quiz so i take pic, idk why</figcaption>
+</figure>
+
+
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- January 30 --</h1> 
+<br>
+<br>
+</figure>
+
+
+<figure class="w-lg">
+  <img class="max-w-auto h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-20.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">its a mousepad gift from my ex!</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-21.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">cool watch xD, gift from my father.</figcaption>
 </figure>
