--- a/src/pages/posts/2023-01.md
+++ b/src/pages/posts/2023-01.md
@@ -84,19 +84,19 @@ And we decided to celebrate the newyear on Tagaytay.
 </figure>
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-13.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-13.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">1st day of 2nd sem, Shooo!</figcaption>
 </figure>
 
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-14.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-14.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">just random pic</figcaption>
 </figure>
 
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-15.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-15.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">my classmates ask me if i can go with them at kai mall, random pic, i have facemask on this pic btw</figcaption>
 </figure>
 
@@ -113,7 +113,7 @@ And we decided to celebrate the newyear on Tagaytay.
 </figure>
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-17.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-17.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">again!</figcaption>
 </figure>
 
@@ -127,7 +127,7 @@ And we decided to celebrate the newyear on Tagaytay.
 
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-18.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-18.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">cr inside of kaimall</figcaption>
 </figure>
 
@@ -140,7 +140,7 @@ And we decided to celebrate the newyear on Tagaytay.
 </figure>
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-19.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-19.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i just finish the quiz so i take pic, idk why</figcaption>
 </figure>
 
@@ -155,11 +155,11 @@ And we decided to celebrate the newyear on Tagaytay.
 
 
 <figure class="w-lg">
-  <img class="max-w-auto h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-20.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-20.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">its a mousepad gift from my ex!</figcaption>
 </figure>
 
 <figure class="w-lg">
-  <img class="max-w-md h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-21.jpg" alt="image description">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-21.jpg" alt="image description">
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">cool watch xD, gift from my father.</figcaption>
 </figure>
