--- a/src/pages/posts/2023-02.md
+++ b/src/pages/posts/2023-02.md
@@ -10,3 +10,125 @@ heroImage: /posts/2023-02/feb-cover.jpg
 
 I started my february photos on birthday of my Tito Rico.<br>
 It's fun btw too much food TT.
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 4 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-1.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">like i said it's birthday of my tito(relative/uncle), eat eat!</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-2.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">idk what juice is this, cheers! -cousin</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-3.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">its chicken roll something, beacons and fresh lumpia so yummy</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-4.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i want fundador but my grandma stop me :<</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-5.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">nice view with smirnoff</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-6.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">2</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-7.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i just tried, sunglass from my cousin </figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-8.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i'm bored so i take a picture of my little sister ;/ </figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-9.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">GoodNight!</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 5 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-10.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">need to go home, i miss my pc:<</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 8 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-11.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">idk why i pic my chair but it's good from local shop :> (so cheap)</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-12.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">school</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-13.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">learn learn!</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 10 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-14.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">random again</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 14 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-15.jpeg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">got my first EG!!!! xD (sorry for naky :/)</figcaption>
+</figure>
+
+<figure class="w-lg text-3xl text-center bold font-mplus">
+<br>
+<h1>-- February 18 --</h1> 
+<br>
+<br>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl" src="/posts/2023-02/feb-16.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">it's night maybe 11pm something, we have a project about parts of pc so i pack up my unit and go to my classmate house, so heavy man :/</figcaption>
+</figure>
