--- a/src/pages/posts/2023-02.md
+++ b/src/pages/posts/2023-02.md
@@ -9,7 +9,8 @@ heroImage: /posts/2023-02/feb-cover.jpg
 ---
 
 I started my february photos on birthday of my Tito Rico.<br>
-It's fun btw too much food TT. (just wait to finish the loading for better sht)
+It's fun btw too much food TT. <br>
+(just wait to finish the loading for better sht)
 
 <figure class="w-lg text-3xl text-center bold font-mplus">
 <br>
