--- a/src/pages/posts/2023-01.md
+++ b/src/pages/posts/2023-01.md
@@ -144,6 +144,16 @@ And we decided to celebrate the newyear on Tagaytay.
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">i just finish the quiz so i take pic, idk why</figcaption>
 </figure>
 
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-19-1.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">my teacher take a photo of me ^_~</figcaption>
+</figure>
+
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-19-2.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">my teacher again took a photo of me TT, it's cool tho hohoho</figcaption>
+</figure>
+
 
 
 <figure class="w-lg text-3xl text-center bold font-mplus">
