--- a/src/pages/posts/2023-01.md
+++ b/src/pages/posts/2023-01.md
@@ -131,6 +131,10 @@ And we decided to celebrate the newyear on Tagaytay.
   <figcaption class="mt-3 mb-8 text-base text-center opacity-70">cr inside of kaimall</figcaption>
 </figure>
 
+<figure class="w-lg">
+  <img class="max-w-full h-auto rounded-lg drop-shadow-2xl mx-auto" src="/posts/2023-01/jan-18-1.jpg" alt="image description">
+  <figcaption class="mt-3 mb-8 text-base text-center opacity-70">idk its just normal, my ex took the pic btw</figcaption>
+</figure>
 
 <figure class="w-lg text-3xl text-center bold font-mplus">
 <br>
